--- a/03_tasks/002_Garden/garden_task.tex
+++ b/03_tasks/002_Garden/garden_task.tex
@@ -73,22 +73,20 @@
     \item[>>] выполнить захват и доставку сгнившего плода в специальный контейнер.
 \end{itemize}
 
-Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
+Количество попыток - одна. На подготовку к попытке дается 5 минут, на выполнение миссии - 10 минут. 
 Очередность команд на попытку определяется жеребьевкой.  
-В ходе выполнения миссии возможно только два вмешательства оператора.  
+В ходе выполнения миссии возможно только три вмешательства оператора.  
 При вмешательстве робот устанавливается только на старт. 
 В случае вмешательства баллы обнуляются. 
 По требованию судьи участник обязан продемонстрировать наличие датчиков/камер на роботе и их работу!
 
 \begin{itemize}
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
-    \item[>>] Положение на полигоне центрального ящика для гнилых плодов будет опре-
-деляться случайным образом перед попыткой.
+    \item[>>] Положение на полигоне центрального ящика для гнилых плодов будет определяться случайным образом перед попыткой.
     \item[>>] Ящик обозначен двумя цифровыми метками ArUco.
     \item[>>] Для распознавания в теплице могут быть размещены до 6 разновидностей
-плодов (из 10 возможных видов), включая 1 гнилой плод. Перечень собирае-
-мых (сбиваемых) плодов становится известен участникам в 1-й день соревно-
-ваний. Порядок размещения плодов в теплице будет изменен перед началом
+плодов (из 10 возможных видов), включая 1 гнилой плод. Перечень собираемых (сбиваемых) 
+плодов становится известен участникам в 1-й день соревнований. Порядок размещения плодов в теплице будет изменен перед началом
 попыток.
 \end{itemize}
 
