--- a/03_tasks/006_Cuprum/cuprum_task.tex
+++ b/03_tasks/006_Cuprum/cuprum_task.tex
@@ -69,12 +69,12 @@
 Для успешного выполенения задания необходимо: 
 \begin{itemize}
     \item[>>] реализовать автономное движение по электролитическим ваннам;
-    \item[>>] выполнить поиск коротких замыканий.
+    \item[>>] выполнить поиск коротких замыканий и включить световую индикацию ванн с коротким замыканием.
 \end{itemize}
 
-Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
+Количество попыток - одна. На подготовку к попытке дается 5 минут, на выполнение миссии - 10 минут. 
 Очередность команд на попытку определяется жеребьевкой.  
-В ходе выполнения миссии возможно только два вмешательства оператора.  
+В ходе выполнения миссии возможно только три вмешательства оператора.  
 При вмешательстве робот устанавливается только на старт. 
 В случае вмешательства баллы обнуляются. 
 По требованию судьи участник обязан продемонстрировать наличие датчиков/камер на роботе и их работу!
@@ -82,12 +82,10 @@
 \begin{itemize}
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
     \item[>>] Короткие замыкания определяются безконтактным способом.
-    \item[>>] Баллы за правильное нажатие кнопок могут быть начислены только в том случае, если было обнаружено короткое замыкание.
+    \item[>>] Баллы за правильное нажатие кнопок могут быть начислены только в том случае, если было обнаружено соответсвующее короткое замыкание.
     \item[>>] Нумерация ванн будет обозначена в первый день соревнований.
-    \item[>>] Номера ванн на полигоне остаются неизменными на протяжении всех сорев-
-нований и обозначены цифрами.
-    \item[>>] Нумерация кнопок в стартовой ячейке определяется случайным образом пе-
-ред началом попыток и остается неизменной в ходе попыток.
+    \item[>>] Номера ванн на полигоне обозначены цифрами и остаются неизменными на протяжении всех соревнований.
+    \item[>>] Нумерация кнопок в стартовой ячейке определяется случайным образом перед началом попыток и остается неизменной в ходе попыток.
 \end{itemize}
 
 \vspace*{0.25cm}
@@ -112,6 +110,6 @@
     Кнопка нажата неверно (максимум 3 раза за попытку) & \WrongButton &  \\
     \hline
 \end{tabularx}
-\vspace*{0.5cm}
+\vspace*{0.2cm}
 
 \end{document}
