--- a/03_tasks/007_IceSnow/icesnow_task.tex
+++ b/03_tasks/007_IceSnow/icesnow_task.tex
@@ -73,12 +73,12 @@
     \item[>>] реализовать автономное движение по полигону с препятствиями;
     \item[>>] выполнить поиск арматур;
     \item[>>] разработать механизм для очистки арматур от снега;
-    \item[>>] выполнить возврат на стартовую ячейку.
+    \item[>>] выполнить возврат на стартовую ячейку (зарядную станцию).
 \end{itemize}
 
-Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
+Количество попыток - одна. На подготовку к попытке дается 5 минут, на выполнение миссии - 10 минут. 
 Очередность команд на попытку определяется жеребьевкой.  
-В ходе выполнения миссии возможно только два вмешательства оператора.  
+В ходе выполнения миссии возможно только три вмешательства оператора.  
 При вмешательстве робот устанавливается только на старт. 
 В случае вмешательства баллы обнуляются. 
 По требованию судьи участник обязан продемонстрировать наличие датчиков/камер на роботе и их работу!
