--- a/03_tasks/001_City/city_task.tex
+++ b/03_tasks/001_City/city_task.tex
@@ -71,9 +71,9 @@
     \item[>>] выполнить распознавание знаков дорожного движения.
 \end{itemize}
 
-Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
+Количество попыток - одна. На подготовку к попытке дается 5 минут, на выполнение миссии - 10 минут. 
 Очередность команд на попытку определяется жеребьевкой.  
-В ходе выполнения миссии возможно только два вмешательства оператора.  
+В ходе выполнения миссии возможно только три вмешательства оператора.  
 При вмешательстве робот устанавливается только на старт. 
 В случае вмешательства баллы обнуляются. 
 По требованию судьи участник обязан продемонстрировать наличие датчиков/камер на роботе и их работу!
@@ -81,10 +81,9 @@
 \begin{itemize}
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
     \item[>>] Перед началом попыток расположение знаков будет изменено.
-    \item[>>] Знаки дорожного движения расположены случайным образом.
     \item[>>] Маршрут движения на полигоне нефиксированный и формируется участни-
 ком исходя из правил дорожного движения.
-    \item[>>] Движение по полосам засчитывается только в том случаем, если робот доехал до парковки (знак P) и забрал хотя бы одних пассажиров.
+    \item[>>] Движение по полосам (колеса не пересекают линию разметки) засчитывается только в том случаем, если робот забрал хотя бы одних пассажиров и доехал до парковки (знак P).
     \item[>>] Положение на полигоне общественного транспорта перед началом попыток
 определяется случайным образом и остается неизменным в ходе попыток.
 \end{itemize}
