--- a/04_final_docs/reglament_addition.tex
+++ b/04_final_docs/reglament_addition.tex
@@ -80,7 +80,8 @@
     
     \item \textbf{«Движение по городу»}
     \begin{itemize}
-        \item Знаки дорожного движения расположены случайным образом
+        \item Знаки дорожного движения расположены таким образом, что маршрут движения робота на 
+        полигоне нефиксированный и формируется участником исходя из правил до­рожного движения
         \item Маршрут движения формируется случайным образом исходя из правил дорожного движения
         \item Положение на полигоне общественного транспорта определяется случайным образом
     \end{itemize}
@@ -120,6 +121,7 @@
     \item \textcolor{red}{Любое изменение кода запрещено}
     \item Каждая команда имеет \textbf{3 вмешательства} за одну попытку
     \item При запуске решения ноутбуки и/или оборудование для демонстрации выполнения задания должны находиться на столе организаторов и контролироваться судьями
+    \item В зачет идет лучший результат из 4х возможных запусков робота на полигоне (с учетом вмешательств).
 \end{itemize}
 
 \vspace*{-0.5cm}
@@ -132,13 +134,13 @@
         \centering
         \vspace{8pt}
         $
-        \text{Бонус за время B} = (600 - T) \times \dfrac{S}{500} \times \dfrac{1}{6}
+        \text{Бонус за время B} = T \times \dfrac{S}{500} \times \dfrac{1}{6}
         $
         \smallskip
         \small
         \begin{tabular}{@{}c@{}}
         где: $T$ — время выполнения (сек)
-        $S$ — набранные баллы
+        $S$ — набранные баллы за лучший заезд
         \end{tabular}
         \vspace{8pt}
         \end{minipage}%
