--- a/03_tasks/001_City/city_task.tex
+++ b/03_tasks/001_City/city_task.tex
@@ -3,7 +3,7 @@
 \usepackage[margin=2.5cm, top=1cm]{geometry}
 
 % Required packages
-\usepackage{amsmath,amsfonts,amsthm,amssymb,mathrsfs} % Mathematical typesetting and symbols
+\usepackage{amsmath,amsfonts,amsthm,amssymb} % Mathematical typesetting and symbols
 \usepackage{enumerate} % Custom enumeration labels
 \usepackage{graphicx} % Figure inclusion
 \usepackage{fancyhdr} % Перемещено сюда
@@ -54,7 +54,7 @@
 
 \maketitle
 \thispagestyle{empty}
-\vspace*{-1cm}
+\vspace*{-2cm}
 
 \renewcommand{\arraystretch}{1}
 \textbf{Задача} - автономная доставка условных пассажиров из зон посадки в зону высадки.
@@ -68,7 +68,7 @@
 Для успешного выполенения задания необходимо: 
 \begin{itemize}
     \item[>>] реализовать автономное движение по городу;
-    \item[>>] выполнить распознавание знаков дорожного движения;
+    \item[>>] выполнить распознавание знаков дорожного движения.
 \end{itemize}
 
 Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
@@ -79,10 +79,14 @@
 По требованию судьи участник обязан продемонстрировать наличие датчиков/камер на роботе и их работу!
 
 \begin{itemize}
-    \item[>>] Движение по полосам засчитывается только в том случаем, если робот доехал до парковки (знак P) и забрал хотя бы одних пассажиров.
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
-    \item[>>] Имитация объектов общесвтенного транспорта не может находиться на перекрестках и угловых ячейках.
-
+    \item[>>] Перед началом попыток расположение знаков будет изменено.
+    \item[>>] Знаки дорожного движения расположены случайным образом.
+    \item[>>] Маршрут движения на полигоне нефиксированный и формируется участни-
+ком исходя из правил дорожного движения.
+    \item[>>] Движение по полосам засчитывается только в том случаем, если робот доехал до парковки (знак P) и забрал хотя бы одних пассажиров.
+    \item[>>] Положение на полигоне общественного транспорта перед началом попыток
+определяется случайным образом и остается неизменным в ходе попыток.
 \end{itemize}
 
 \vspace*{0.25cm}
@@ -104,10 +108,5 @@
     \hline
 \end{tabularx}
 \vspace*{0.25cm}
-
-\textcolor{red}{ВАЖНО!} В ходе попытки необходимо в режиме реального времени демонстрировать судьям, 
-результаты выполнения заданий в понятном и читаемом виде. 
-Так же обязательно к концу попытки должен быть сформирован log-файл с 
-указанием результатов распознавания и соответствующего момента времени.
 
 \end{document}
