--- a/03_tasks/002_Garden/garden_task.tex
+++ b/03_tasks/002_Garden/garden_task.tex
@@ -61,16 +61,16 @@
 \renewcommand{\arraystretch}{1}
 \textbf{Задача} - автономный сбор урожая в условиях смоделированной тепличной среды.
 
-Робот должен начать движение со стартовой ячейки, проехать по теплице и собрать заданные овощи или фрукты, 
+Робот должен начать движение со стартовой ячейки, проехать по теплице и собрать заданные плоды, 
 а также утилизировать один гнилой фрукт или овощ.
 Также по окончании обследования должен быть сформирован файл-протокол.
 
 Для успешного выполенения задания необходимо: 
 \begin{itemize}
     \item[>>] реализовать автономное движение по теплице;
-    \item[>>] выполнить распознавание заданных овощей/фруктов;
-    \item[>>] выполнить сбор урожая заданных овощей/фруктов;
-    \item[>>] выполнить захват и доставку сгнившего фрукта/овоща в специальный контейнер.
+    \item[>>] выполнить распознавание заданных плодов;
+    \item[>>] собрать заданные плоды;
+    \item[>>] выполнить захват и доставку сгнившего плода в специальный контейнер.
 \end{itemize}
 
 Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
@@ -82,6 +82,14 @@
 
 \begin{itemize}
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
+    \item[>>] Положение на полигоне центрального ящика для гнилых плодов будет опре-
+деляться случайным образом перед попыткой.
+    \item[>>] Ящик обозначен двумя цифровыми метками ArUco.
+    \item[>>] Для распознавания в теплице могут быть размещены до 6 разновидностей
+плодов (из 10 возможных видов), включая 1 гнилой плод. Перечень собирае-
+мых (сбиваемых) плодов становится известен участникам в 1-й день соревно-
+ваний. Порядок размещения плодов в теплице будет изменен перед началом
+попыток.
 \end{itemize}
 
 \vspace*{0.25cm}
@@ -89,28 +97,23 @@
     \hline
     \textbf{Задание} & \textbf{Баллы} & \textbf{Результат}\\
     \hline
-    Распознан заданный овощ/фрукт & \DetectPlod &  \\
+    Распознан заданный плод & \DetectPlod &  \\
     \hline
-    Собран правильный овощ/фрукт & \CatchPlod & \\
+    Собран правильный плод & \CatchPlod & \\
     \hline
-    Распознан сгнивший овощ/фрукт & \RottenPlod & \\
+    Распознан сгнивший плод & \RottenPlod & \\
     \hline 
-    Захвачен сгнивший овощ/фрукт & \CatchRottenPlod & \\
+    Захвачен сгнивший плод & \CatchRottenPlod & \\
     \hline
-    Перемещен сгнивший овощ/фрукт в контейнер & \StoredRottenPlod & \\
+    Перемещен сгнивший плод в контейнер & \StoredRottenPlod & \\
     \hline
     Вмешательство без штрафа (1) &  & \\
     \hline
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
-    Собран неправильный овощ/фрукт & \wrongPlod &  \\
+    Собран неправильный плод & \wrongPlod &  \\
     \hline
 \end{tabularx}
 \vspace*{0.25cm}
-
-\textcolor{red}{ВАЖНО!} В ходе попытки необходимо в режиме реального времени демонстрировать судьям, 
-результаты выполнения заданий в понятном и читаемом виде. 
-Так же обязательно к концу попытки должен быть сформирован log-файл с 
-указанием результатов распознавания и соответствующего момента времени.
 
 \end{document}
