--- a/03_tasks/006_Cuprum/cuprum_task.tex
+++ b/03_tasks/006_Cuprum/cuprum_task.tex
@@ -83,6 +83,11 @@
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
     \item[>>] Короткие замыкания определяются безконтактным способом.
     \item[>>] Баллы за правильное нажатие кнопок могут быть начислены только в том случае, если было обнаружено короткое замыкание.
+    \item[>>] Нумерация ванн будет обозначена в первый день соревнований.
+    \item[>>] Номера ванн на полигоне остаются неизменными на протяжении всех сорев-
+нований и обозначены цифрами.
+    \item[>>] Нумерация кнопок в стартовой ячейке определяется случайным образом пе-
+ред началом попыток и остается неизменной в ходе попыток.
 \end{itemize}
 
 \vspace*{0.25cm}
@@ -108,10 +113,5 @@
     \hline
 \end{tabularx}
 \vspace*{0.5cm}
-
-\textcolor{red}{ВАЖНО!} В ходе попытки необходимо в режиме реального времени демонстрировать судьям, 
-результаты выполнения заданий в понятном и читаемом виде. 
-Так же обязательно к концу попытки должен быть сформирован log-файл с 
-указанием результатов распознавания и соответствующего момента времени.
 
 \end{document}
