--- a/03_tasks/007_IceSnow/icesnow_task.tex
+++ b/03_tasks/007_IceSnow/icesnow_task.tex
@@ -87,9 +87,11 @@
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
     \item[>>] Участок считается очищенным после уборки более 75\% от общего объёма снега в данном углублении с арматурой.
     \item[>>] Баллы за возврат на стартовую ячейку начисляются только в случае очистки от снега арматур (не менее 1).
+    \item[>>] Положение сугробов и арматур определяется случайнм образом и остается
+неизменной в ходе попыток.
 \end{itemize}
 
-\vspace*{0.1cm}
+\vspace*{0.25cm}
 \begin{tabularx}{\textwidth}{|X|c|p{2cm}|}
     \hline
     \textbf{Задание} & \textbf{Баллы} & \textbf{Результат}\\
@@ -105,11 +107,6 @@
     Выполнен возврат робота на стартовую ячейку & \MasterHoming & \\
     \hline
 \end{tabularx}
-\vspace*{0.1cm}
-
-\textcolor{red}{ВАЖНО!} В ходе попытки необходимо в режиме реального времени демонстрировать судьям, 
-результаты выполнения заданий в понятном и читаемом виде. 
-Так же обязательно к концу попытки должен быть сформирован log-файл с 
-указанием результатов распознавания и соответствующего момента времени.
+\vspace*{0.25cm}
 
 \end{document}
