--- a/footer_options.tex
+++ b/footer_options.tex
@@ -7,6 +7,6 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont
         \color{gray!75}
-        «Кубок РТК Высшая Лига: Сириус», 26-28 ноября 2025 г.\par}}
+        «Кубок РТК Высшая Лига: Финал, 26-28 ноября 2025 г.\par}}
     \fi
 }
