--- a/04_final_docs/reglament_addition.tex
+++ b/04_final_docs/reglament_addition.tex
@@ -57,7 +57,12 @@
 
 \begin{center}
 \vspace*{10cm} % Отступ сверху для вертикального центрирования
-{\LARGE Дополнение к регламенту финала соревнований «Кубок РТК Высшая Лига»}
+{\LARGE Финал Международных робототехнических соревнований «Кубок РТК Высшая Лига»}
+\end{center}
+
+\begin{center}
+\vspace*{1cm} 
+{\large Дополнение к регламенту}
 \end{center}
 
 
@@ -67,42 +72,49 @@
 
 
 \vspace*{-0.5cm}
-\section*{Полигоны}
-Финальный этап соревнований включает в себя четыре различных полигона для автономного прохождения.
-
+\section*{Хакатоны}
+Финальный этап соревнований включает в себя четыре различных хакатона. 
+Из них необходимо будет выбрать один хакатон из сезонов 2023-2024 - "Движение по городу" или "Сбор урожая" и один из новых хакатонов 2025 года - "Ледяной вызов" или "Электролиз меди". 
+Выбранные пары хакатонов будут фикироваться при регистрации в первый день соревнований.
 \begin{enumerate}
     \item \textbf{«Сбор Урожая»}
     \begin{itemize}
         \item Положение на полигоне центрального ящика для гнилых фруктов и овощей определяется случайным образом
-        \item Ящик обозначен двумя цифровыми метками
-        \item Для распознавания представлен полный набор овощей и фруктов, в том числе и гнилых
+        \item Ящик обозначен двумя цифровыми метками ArUco
+        \item Для распознавания в теплице могут быть размещены 
+        до 6 разновидностей овощей и фруктов (из 10 возможных видов) включая 
+        1 гнилой плод. Перечень собираемых (сбиваемых) плодов становится известен 
+        участникам в 1-й день соревнований. 
+        Порядок размещения плодов в теплице будет изменен перед началом попыток
     \end{itemize}
     
     \item \textbf{«Движение по городу»}
     \begin{itemize}
         \item Знаки дорожного движения расположены таким образом, что маршрут движения робота на 
         полигоне нефиксированный и формируется участником исходя из правил до­рожного движения
-        \item Маршрут движения формируется случайным образом исходя из правил дорожного движения
-        \item Положение на полигоне общественного транспорта определяется случайным образом
+        \item Перед началом попыток расположение знаков будет изменено
+        \item Положение на полигоне общественного транспорта перед началом попыток определяется 
+        случайным образом и остается неизменным в ходе попыток
     \end{itemize}
     
-    \item \textbf{«Медный завод»}
+    \item \textbf{«Электролиз меди»}
     \begin{itemize}
-        \item Номера ванн на полигоне остаются неизменными на протяжении всех соревнований и обозначены цифрами
         \item Нумерация ванн будет обозначена в первый день соревнований
-        \item Нумерация кнопок определяется случайным образом
+        \item Номера ванн на полигоне остаются неизменными на протяжении всех сорев­нований и обозначены цифрами
+        \item Нумерация кнопок в стартовой ячейке остается неизменной в ходе попыток и определяется случайным 
+        образом перед началом попыток
     \end{itemize}
     
     \item \textbf{«Ледяной вызов»}
     \begin{itemize}
-        \item Положение сугробов и арматур определяется случайнм образом
+        \item Положение сугробов и арматур изменяется перед началом попыток
     \end{itemize}
 \end{enumerate}
 
 \vspace*{-0.5cm}
 \section*{Карантин}
 \begin{itemize}
-    \item Карантин вводится за 10 минут до старта попыток
+    \item Карантин вводится за 10 минут до начала попыток
     \item Робот должен находиться в карантине с полностью отключенным питанием, за исключением процедуры зарядки аккумуляторов.
     \item Любые модификации аппаратной части или программного кода (включая жёстко прописанные параметры - хардкод) 
     запрещены и являются основанием для дисквалификации
@@ -112,22 +124,23 @@
 \vspace*{-0.5cm}
 \section*{Ход попытки}
 \begin{itemize}
-    \item На выполнение задания на одном полигоне предоставляется одна попытка.
+    \item Для выполнения задания на одном полигоне предоставляется одна попытка
     \item На выступление одной команды на одном полигоне отводится \textbf{15 минут}:
     \begin{itemize}
         \item 5 минут подготовка
         \item 10 минут попытка
     \end{itemize}
-    \item \textcolor{red}{Любое изменение кода запрещено}
+    \item \textcolor{red}{Любое изменение кода в ходе 5 минутной подготовки к попытке и во время самой попытки запрещено}
     \item Каждая команда имеет \textbf{3 вмешательства} за одну попытку
-    \item При запуске решения ноутбуки и/или оборудование для демонстрации выполнения задания должны находиться на столе организаторов и контролироваться судьями
+    \item В ходе попытки при запуске решения ноутбуки 
+    и/или оборудование для демонстрации выполнения задания должны находиться на столе организаторов и контролироваться судьями.
     \item В зачет идет лучший результат из 4х возможных запусков робота на полигоне (с учетом вмешательств).
 \end{itemize}
 
 \vspace*{-0.5cm}
 \section*{Бонус за время}
 \begin{itemize}
-    \item Максимальный бонус за время рассчитывается по формуле:
+    \item Максимальный бонус за досрочное завершение попытки рассчитывается по формуле:
     \begin{center}
     \fbox{%
         \begin{minipage}{0.8\textwidth}
@@ -139,7 +152,7 @@
         \smallskip
         \small
         \begin{tabular}{@{}c@{}}
-        где: $T$ — время выполнения (сек)
+        где: $T$ — время выполнения (сек),
         $S$ — набранные баллы за лучший заезд
         \end{tabular}
         \vspace{8pt}
@@ -149,15 +162,16 @@
     
     \item Бонус за время ${B}$ \textbf{не превышает 100 баллов}, что составляет \textbf{20\%} от максимального количества баллов полигона
     \item Максимальное количество баллов за первый и второй выбранный полигон составляет
-    \begin{itemize}
-        \item Первый полигон: $R_1 = 500 + \text{бонус за время}$ (макс. 600 баллов)
-        \item Второй полигон: $R_2 = 500 + \text{бонус за время}$ (макс. 600 баллов)
-    \end{itemize}
+    \begin{center}
+    $R_i = S + B$, где i - порядковый номер полигона
+    \end{center}
+    \item Максимально возможное количество баллов за полигон – 600
 \end{itemize}
 
 \vspace*{-0.5cm}
 \section*{Итоговая оценка}
-Итоговое распределение мест среди команд определяется по фомруле
+В итоговый список баллов этапа идет сумма баллов за два полигона. 
+Побеждает команда, набравшая наибольшее количество суммарных баллов.
 \begin{center}
 \fbox{%
     \begin{minipage}{0.8\textwidth}
